--- a/src/css/header.css
+++ b/src/css/header.css
@@ -78,8 +78,9 @@ letter-spacing: 0.03em;
   transform: translateY(-100%);
   transition: transform 250ms;
   z-index: 999;
-  overflow: hidden;
+  
 }
+
 
 .mob-menu-wrap {
   position: absolute;
@@ -168,7 +169,7 @@ margin-left: 5px;
   border-radius: 50px;
   border: 1px solid transparent;
   margin-right: 10px;
-  transition-duration: 300ms;
+  transition-duration: 250ms;
 
 }
 
@@ -181,7 +182,7 @@ margin-left: 5px;
   height: 18px;
   border-radius: 50%;
   background-color: rgba(0, 176, 104, 1);
-  transition-duration: 300ms;
+  transition-duration: 250ms;
 }
 
 .check-input:checked+.check-text::after {
